--- a/chargedcloud-crud-companies/src/components/header/Header.css
+++ b/chargedcloud-crud-companies/src/components/header/Header.css
@@ -3,9 +3,9 @@ header .nav-link {
     text-decoration: none;
     transition: color 0.3s ease, transform 0.3s ease;
 }
-
-header .nav-link:hover{
+header .nav-link:hover,
+header .nav-link:focus {
     color: #0E1242;
     transform: scale(1.05);
-    font-weight:500; 
+    font-weight: 500;
 }
