--- a/chargedcloud-crud-companies/src/components/section/home/table/Table.css
+++ b/chargedcloud-crud-companies/src/components/section/home/table/Table.css
@@ -10,6 +10,11 @@
     min-width: 100%;
 }
 
+.table td a i svg {
+    display: block;
+    margin: auto;
+}
+
 table.table tr th, table.table tr td {
     border-color: #e9e9e9;
 }
@@ -29,7 +34,7 @@ table.table td:last-child {
 table.table td a {
     color: #a0a5b1;
     display: inline-block;
-    margin: 0 5px;
+    margin: 0 8px;
 } 
 
 .pagination {
@@ -78,3 +83,4 @@ table.table td a {
 .material-icons svg:hover {
     transform: scale(1.2); 
 }
+
