--- a/chargedcloud-crud-companies/src/App.css
+++ b/chargedcloud-crud-companies/src/App.css
@@ -1,11 +1,11 @@
 .app-container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Garante que a altura mínima seja 100% da tela */
+    min-height: 100vh; /* Garantindo que a altura mínima seja 100% da tela */
 }
 
 header, section, footer {
-    flex-shrink: 0; /* Garante que os componentes não quebre */
+    flex-shrink: 0; /* Garantindo que os componentes não quebre */
 }
 
 section {
